# TristansKortAnimator

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  test3d.qml
installer/: TEMPLATE_setupvars.iss  setup.iss  version.iss  version.iss.in
qml/: Theme.qml  main.qml  main_test3d.qml
qml/components/: EffectPropertiesPanel.qml  ExportDialog.qml  GeoOverlayTimeline.qml  GlobeView.qml  KeyframeMarker.qml  KeyframePanel.qml  MapView.qml  MarkerEditor.qml  OverlayList.qml  OverlayPanel.qml  OverlayPropertiesPanel.qml  OverlayTimeline.qml  PreviewControls.qml  PropertyPanel.qml  PropertySubTrack.qml  RegionPicker.qml  RegionTrackTimeline.qml  StyledButton.qml  StyledComboBox.qml  StyledSlider.qml  Timeline.qml
qml/pages/: SettingsPage.qml
resources/: resources.qrc
resources/geojson/: countries.geojson
src/: main.cpp  version.h.in
src/3d/: countrygeometry.cpp  countrygeometry.h  globecamera.cpp  globecamera.h  globegeometry.cpp  globegeometry.h
src/animation/: animationcontroller.cpp  animationcontroller.h  easingfunctions.h  framebuffer.cpp  framebuffer.h  geooverlay.h  geooverlaymodel.cpp  geooverlaymodel.h  interpolator.cpp  interpolator.h  keyframe.cpp  keyframe.h  keyframemodel.cpp  keyframemodel.h  overlaykeyframe.cpp  overlaykeyframe.h  regiontrack.h  regiontrackmodel.cpp  regiontrackmodel.h
src/controllers/: maincontroller.cpp  maincontroller.h
src/core/: projectmanager.cpp  projectmanager.h  settings.cpp  settings.h
src/export/: ffmpegpipeline.cpp  ffmpegpipeline.h  framecapturer.cpp  framecapturer.h  videoexporter.cpp  videoexporter.h
src/map/: cityboundaryfetcher.cpp  cityboundaryfetcher.h  geojsonparser.cpp  geojsonparser.h  mapcamera.cpp  mapcamera.h  maprenderer.cpp  maprenderer.h  tilecache.cpp  tilecache.h  tileprovider.cpp  tileprovider.h
src/overlays/: arrowoverlay.cpp  arrowoverlay.h  markeroverlay.cpp  markeroverlay.h  overlay.cpp  overlay.h  overlaymanager.cpp  overlaymanager.h  regionhighlight.cpp  regionhighlight.h  textoverlay.cpp  textoverlay.h
